--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "陈龙彬"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Hello，world"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Changan University"
   uri              : # URL
   email            : "none@example.org" 
 
